select, button and scss typograpy

--- a/projects/ngx-relic/tsconfig.lib.json
+++ b/projects/ngx-relic/tsconfig.lib.json
@@ -2,7 +2,11 @@
 {
   "extends": "../../tsconfig.json",
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": false,
+    "strictTemplates": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "enableI18nLegacyMessageIdFormat": false
   },
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
