--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,7 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "paths": {
-      "ngx-relic": [
-        "dist/ngx-relic"
-      ]
+      "ngx-relic": ["dist/ngx-relic"]
     },
     "declaration": false,
     "downlevelIteration": true,
@@ -24,15 +22,12 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": false
   }
 }
