--- a/package.json
+++ b/package.json
@@ -29,6 +29,15 @@
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@chromatic-com/storybook": "^1.4.0",
+    "@compodoc/compodoc": "^1.1.24",
+    "@storybook/addon-docs": "^8.1.1",
+    "@storybook/addon-essentials": "^8.1.1",
+    "@storybook/addon-interactions": "^8.1.1",
+    "@storybook/addon-links": "^8.1.1",
+    "@storybook/angular": "^8.1.1",
+    "@storybook/blocks": "^8.1.1",
+    "@storybook/test": "^8.1.1",
     "@types/jasmine": "~4.3.0",
     "glob": "^10.3.3",
     "jasmine-core": "~4.6.0",
@@ -38,6 +47,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^16.0.0",
+    "storybook": "^8.1.1",
     "typescript": "~5.1.3"
   },
   "exports": {
