--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
-    "@angular/common": "^16.1.0",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.1.0",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.1.0",
+    "@angular/animations": "^17.3.9",
+    "@angular/cdk": "^17.3.9",
+    "@angular/common": "^17.3.9",
+    "@angular/compiler": "^17.3.9",
+    "@angular/core": "^17.3.9",
+    "@angular/forms": "^17.3.9",
+    "@angular/platform-browser": "^17.3.9",
+    "@angular/platform-browser-dynamic": "^17.3.9",
+    "@angular/router": "^17.3.9",
     "material-icons": "^1.13.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "~16.1.4",
-    "@angular/compiler-cli": "^16.1.0",
+    "@angular-devkit/build-angular": "^17.3.7",
+    "@angular/cli": "~17.3.7",
+    "@angular/compiler-cli": "^17.3.9",
     "@chromatic-com/storybook": "^1.4.0",
     "@compodoc/compodoc": "^1.1.24",
     "@storybook/addon-docs": "^8.1.1",
@@ -47,9 +48,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^16.0.0",
+    "ng-packagr": "^17.3.0",
     "storybook": "^8.1.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.4.5"
   },
   "exports": {
     ".": {
