--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx-relic",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "ng": "ng",
