--- a/projects/ngx-relic/package.json
+++ b/projects/ngx-relic/package.json
@@ -1,14 +1,20 @@
 {
   "name": "ngx-relic",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "peerDependencies": {
     "@angular/common": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/forms": "^17.3.9",
     "@angular/cdk": "^17.3.9",
     "material-icons": "^1.13.7"
   },
   "dependencies": {
     "tslib": "^2.3.0"
+  },
+  "exports": {
+    ".": {
+      "sass": "./src/lib/styles.scss"
+    }
   },
   "sideEffects": false
 }
