--- a/projects/ngx-relic/package.json
+++ b/projects/ngx-relic/package.json
@@ -6,7 +6,8 @@
     "@angular/core": "^16.1.0",
     "@angular/forms": "^17.3.9",
     "@angular/cdk": "^17.3.9",
-    "material-icons": "^1.13.7"
+    "material-icons": "^1.13.7",
+    "luxon": "^3.4.4"
   },
   "dependencies": {
     "tslib": "^2.3.0"
