--- a/projects/ngx-relic/package.json
+++ b/projects/ngx-relic/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ngx-relic",
-  "version": "0.0.9",
+  "version": "0.0.11",
   "keywords": [
     "angular",
     "components",
     "ui"
   ],
+  "./button": {
+    "esm2022": "./esm2022/lib/button/public-api.mjs",
+    "esm": "./esm2022/lib/button/public-api.mjs"
+  },
   "peerDependencies": {
     "@angular/common": "^17.3.9",
     "@angular/core": "^17.3.9",
@@ -13,15 +17,11 @@
     "@angular/cdk": "^17.3.9",
     "material-icons": "^1.13.7",
     "@types/luxon": "^3.4.2",
+    "@fontsource/quicksand": "^5.0.18",
     "luxon": "^3.4.4"
   },
   "dependencies": {
     "tslib": "^2.3.0"
-  },
-  "exports": {
-    ".": {
-      "sass": "./src/lib/styles.scss"
-    }
   },
   "sideEffects": false
 }
