--- a/projects/ngx-relic/tsconfig.lib.json
+++ b/projects/ngx-relic/tsconfig.lib.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tsconfig.json",
   "angularCompilerOptions": {
-    "enableIvy": false,
+    "enableIvy": true,
     "strictTemplates": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
