--- a/projects/ngx-relic/package.json
+++ b/projects/ngx-relic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-relic",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "keywords": [
     "angular",
     "components",
@@ -17,11 +17,15 @@
     "@angular/cdk": "^17.3.9",
     "material-icons": "^1.13.7",
     "@types/luxon": "^3.4.2",
-    "@fontsource/quicksand": "^5.0.18",
     "luxon": "^3.4.4"
   },
   "dependencies": {
     "tslib": "^2.3.0"
+  },
+  "exports": {
+    ".": {
+      "sass": "./src/assets/scss/_main.scss"
+    }
   },
   "sideEffects": false
 }
