--- a/projects/ngx-relic/.storybook/tsconfig.json
+++ b/projects/ngx-relic/.storybook/tsconfig.json
@@ -6,6 +6,11 @@
     "resolveJsonModule": true
   },
   "exclude": ["../src/test.ts", "../src/**/*.spec.ts"],
-  "include": ["../src/**/*.stories.*", "./preview.ts"],
+  "include": [
+    "../src/**/*.stories.*",
+    "../src/**/*.ts",
+    "../src/**/*.mdx",
+    "./preview.ts"
+  ],
   "files": ["./typings.d.ts"]
 }
