--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-relic",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "license": "MIT",
   "type": "module",
   "scripts": {
@@ -52,6 +52,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.3.0",
+    "ngx-cva-test-suite": "^2.0.1",
     "remark-gfm": "^4.0.0",
     "storybook": "^8.1.1",
     "typescript": "~5.4.5"
