pruebas unitarias de input y tooltip

--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "codeCoverage": true,
             "tsConfig": "projects/ngx-relic/tsconfig.spec.json",
             "polyfills": ["zone.js", "zone.js/testing"],
             "stylePreprocessorOptions": {
